--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f6ac6045",
+   "id": "cfdfe113",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4cb72e79",
+   "id": "36ba3f92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "390a6ecb",
+   "id": "d4d44e76",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9f5b3f1a",
+   "id": "4e3ac46d",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8639dc0a",
+   "id": "d278b602",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "421756bf",
+   "id": "4ac1af66",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2fe6a0d2",
+   "id": "67c3e814",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b5d83f10",
+   "id": "93922517",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "acc69262",
+   "id": "5672a60a",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2796c5af",
+   "id": "1700208c",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "80afc065",
+   "id": "5222866e",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c10223b8",
+   "id": "8e165754",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4c1539dd",
+   "id": "84875d7c",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "719864e9",
+   "id": "40e9e6d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4bb495a3",
+   "id": "acf85603",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "53506d9b",
+   "id": "f45592f3",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "21f7e4a0",
+   "id": "bb6393b8",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "611fd51a",
+   "id": "6d58854d",
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c14ebe03",
+   "id": "fbb34ac7",
    "metadata": {},
    "outputs": [
     {
@@ -526,8 +526,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "0ad45ad8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1657333078.253361"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "\n",
+    "# Get today's date in seconds.\n",
+    "today = time.time()\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "002a9e28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'07/08/22'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "today = time.strftime(\"%x\")\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ad95f7fe",
+   "id": "4532620c",
    "metadata": {},
    "outputs": [],
    "source": []
